Fix homepage spacing.

--- a/events/static/home.css
+++ b/events/static/home.css
@@ -20,7 +20,7 @@ h1 {
 ul {
     list-style-type: none;
     padding: 0;
-    max-width: 400px;
+    max-width: 500px;
     margin: 20px auto;
 }
 
@@ -29,6 +29,7 @@ ul li {
     background-color: white;
     margin-bottom: 10px;
     padding: 10px;
+    margin-left: -28px;
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
